[tool.ruff]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

lint.ignore = ["E501", "E402", "E721"]

[project]
dynamic = ["version"]
name = "bspump"
description = "BSPump is a real-time stream processor for Python 3.6+"
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {file = "LICENSE"}
# keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
authors = [
  {name = "TeskaLabs Ltd", email = "info@teskalabs.com"}
]
# maintainers = [
#   {name = "Brett Cannon", email = "brett@example.com"}
# ]

dependencies = [
        "pyasn1==0.4.8",  # version 0.5.0 is not compatible with pysnmp
        "asab @ git+https://github.com/bitswan-space/asab.git#egg=asab",
        "aiohttp>=3.8.3",
        "requests>=2.24.0",
        "confluent-kafka>=1.8.2",
        "aiozk>=0.25.0",
        "aiosmtplib>=1.1.3",
        "fastavro>=0.23.5",
        "google-api-python-client>=1.7.10",
        "numpy>=1.19.0",
        "pika>=1.1.0",
        "pymysql>=0.9.2,<=0.9.2",  # aiomysql 0.0.20 requires PyMySQL<=0.9.2
        "aiomysql>=0.0.20",
        "mysql-replication>=0.21",
        "pytz>=2020.1",
        "netaddr>=0.7.20",
        "pyyaml>=5.4",
        "pymongo>=3.10.1",
        "motor>=2.1.0",
        "mongoquery>=1.3.6",
        "pybind11>=2.6.1",
        "cysimdjson @ git+https://github.com/TeskaLabs/cysimdjson.git#egg=cysimdjson",
        "pywinrm>=0.4.1",
        "pandas>=0.24.2",
        "xxhash>=1.4.4",
        "orjson",
        "pyjq>=2.6.0",
        "croniter>=1.4.1",
        "paho-mqtt",
        "jupyter",
        "jupyterlab",
        "jupyterlab-git",
        "jupyter_app_launcher",
        "dockerfile-parse",
        "docker",
]

[tool.hatch.version]
path = "pkg/__about__.py"

[tool.hatch.metadata]
allow-direct-references=true
