[project]
name = "bitswan"
description = "Bitswan is a framework for building automations and pipelines in Jupyter"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
  {name = "LibertyAces Ltd", email = "timothy.hobbs@libertyaces.com"}
]
dynamic = ["version"]

dependencies = [
        "pyasn1==0.4.8",  # version 0.5.0 is not compatible with pysnmp
        "aiohttp>=3.8.3",
        "requests>=2.32.0",
        "confluent-kafka>=1.8.2",
        "aiozk>=0.25.0",
        "aiosmtplib>=1.1.3",
        "fastavro>=0.23.5",
        "google-api-python-client>=1.7.10",
        "numpy>=1.19.0",
        "pika>=1.1.0",
        "pymysql>=1.1.1",
        "aiomysql>=0.2.0",
        "mysql-replication>=0.21",
        "pytz>=2020.1",
        "netaddr>=0.7.20",
        "pyyaml>=5.4",
        "pymongo>=3.10.1",
        "motor>=2.1.0",
        "mongoquery>=1.3.6",
        "pybind11>=2.6.1",
        "pandas>=0.24.2",
        "matplotlib==3.8.0",
        "xxhash>=1.4.4",
        "orjson",
        "croniter>=1.4.1",
        "paho-mqtt",
        "jupyter",
        "dockerfile-parse",
        "docker",
        "fastjsonschema>=2.16.2,<3",
        "kazoo>=2.9.0,<3",
        "nest-asyncio==1.6.0",
        "python-dotenv==1.0.1",
        "pyjwt==v2.10.1",
        "setuptools>=70.0.0",
        "urllib3>=1.26.19",
        "certifi>=2023.7.22",
        "zipp>=3.19.1",
        "jinja2>=3.1.6",
        "idna>=3.7",
        "cryptography>=44.0.1",
        "importlib-resources"
]

[project.optional-dependencies]
dev = [
    "coverage==4.5.3",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "black==23.1.0",
    "watchdog==6.0.0"
]
pyjq-support = [
    "pyjq>=2.6.0",
]

[project.scripts]
bitswan-notebook = "bspump.main:main"


[tool.ruff]
lint.ignore = ["E501", "E402", "E721", "E712"]

[build-system]
requires = ["hatchling","versioningit"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references=true

[tool.hatch.build.targets.wheel]
packages = ["bspump"]
include = [
    "static/**/*"
]

[tool.hatch.version]
source = "versioningit"
default-version = "0.0.0"

[project.urls]
homepage = "https://github.com/bitswan-space/BitSwan"
